# wasm_crossword_generator

./: README.md  package-lock.json  package.json  rollup.config.js
crate/: Cargo.toml  README.md
crate/src/: lib.rs
example/basic_web_app/: package-lock.json  package.json
example/basic_web_app/src/: App.svelte
example/react_web_example/: README.md  package-lock.json  package.json
example/react_web_example/src/: App.css  App.tsx
example/react_web_example/src/components/: AnagramCrossword.tsx  Crossword.tsx
example/react_web_example/src/data/: solutions.ts
example/react_web_example/src/util/: crossword_conf.ts
example/solution_test/: package-lock.json
example/solution_test/src/: App.svelte
src/: crossword_gen_wrapper.ts  crossword_generator_wrapper.ts  index.ts  index_core.ts
