[package]
name = "wasm_crossword_generator"
version = "0.0.1"
authors = ["K <kelseydrhoda@gmail.com>"]
edition = "2021"
homepage = "https://github.com/krhoda/wasm_crossword_generator/"
documentation = "https://docs.rs/wasm_crossword_generator/latest/wasm_crossword_generator/"
repository = "https://github.com/krhoda/wasm_crossword_generator/"
description = "A pure Rust library for crossword puzzle generation with first-class WASM support."
license = "MIT OR Apache-2.0"
readme = "README.md"
keywords = ["game", "words", "crossword", "wasm", "WebAssembly"]

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.7", optional = true }

rand = "0.8"
# NOTE: This is required to make use of Rand.
getrandom = {version = "0.2", features = ["js"]}
serde = {version = "1", features = ["derive"]}
serde_json = "1"
thiserror = "1"
tsify = "0.4.5"
wasm-bindgen = "0.2.84"

[dev-dependencies]
wasm-bindgen-test = "0.3.34"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
